--- a/heartroom/src/pages/Main/Main.css
+++ b/heartroom/src/pages/Main/Main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  height: 150vh;
+  height: 100vh;
   width: 100vw;
   background-image: url("../../../public/images/bg/star.jpg");
   background-repeat: no-repeat;
@@ -18,10 +18,10 @@ main {
   height: 100vh;
 }
 
-.bookmark {
-  width: 300px;
-  height: 300px;
-  background-color: white;
+a {
+  font-size: 25px;
+  color: var(--puple-color);
+  text-decoration: none;
 }
 
 .heart {
@@ -54,5 +54,98 @@ main {
   45% {
     transform: scale(1);
     animation-timing-function: ease-out;
+  }
+}
+
+.bookmark {
+  position: fixed;
+  text-align: center;
+  left: -180px;
+  top: 130px;
+}
+
+.bookmark__li:nth-child(1) {
+  width: 200px;
+  height: 100px;
+  border-radius: 25px;
+  background-color: white;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 35px;
+  /* position: absolute; */
+  /* top: -300px;
+  right: 870px; */
+  cursor: pointer;
+}
+
+.bookmark__li:nth-child(2) {
+  width: 200px;
+  height: 100px;
+  border-radius: 25px;
+  background-color: white;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 35px;
+  /* position: absolute;
+  /* top: -450px; 
+  right: 370px; */
+  cursor: pointer;
+}
+
+.bookmark__li:nth-child(3) {
+  width: 200px;
+  height: 100px;
+  border-radius: 25px;
+  background-color: white;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  /* position: absolute;
+  top: -150px;
+  right: 870px; */
+}
+
+.bookmark__li:nth-child(1):hover {
+  cursor: pointer;
+  animation: first-li-slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@keyframes first-li-slide-right {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(80px);
+  }
+}
+
+.bookmark__li:nth-child(2):hover {
+  cursor: pointer;
+  animation: second-li-slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
+}
+
+@keyframes second-li-slide-right {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(80px);
+  }
+}
+
+.bookmark__li:nth-child(3):hover {
+  cursor: pointer;
+  animation: third-li-slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@keyframes third-li-slide-right {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(80px);
   }
 }
